Add transactions when locking entities