@@ -65,7 +65,7 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 		phones.add( new Phone( "111-111-1111" ) );
 		thePerson = new Person( 777777, "Claude", phones );
 		test( context, getSessionFactory()
-				.withTransaction( (s, t) -> s.persist( thePerson ) ) );
+				.withTransaction( s -> s.persist( thePerson ) ) );
 	}
 
 	@After
@@ -80,10 +80,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 		phones.add( new Phone( "555" ) );
 		Person johnny = new Person( 999, "Johnny English", phones );
 
-		test( context, openMutinySession()
-				.chain( session -> session
-						.persist( johnny )
-						.call( session::flush ) )
+		test( context, getMutinySessionFactory()
+				.withTransaction( session -> session.persist( johnny ) )
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, johnny.getId() ) )
 				.invoke( found -> assertPhones( context, found, "555", "888" ) )
@@ -108,11 +106,11 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 
 	@Test
 	public void addOneElementWithStageAPI(TestContext context) {
-		test( context, openSession()
-				.thenCompose( session -> session.find( Person.class, thePerson.getId() )
+		test( context, getSessionFactory()
+				.withTransaction( session -> session
+						.find( Person.class, thePerson.getId() )
 						// Remove one element from the collection
-						.thenAccept( foundPerson -> foundPerson.getPhones().add( new Phone( "000" ) ) )
-						.thenCompose( v -> session.flush() ) )
+						.thenAccept( foundPerson -> foundPerson.getPhones().add( new Phone( "000" ) ) ) )
 				.thenCompose( v -> openSession() )
 				.thenCompose( session -> session.find( Person.class, thePerson.getId() ) )
 				.thenAccept( updatedPerson -> assertPhones( context, updatedPerson, "000", "111-111-1111", "999-999-9999" ) )
@@ -128,10 +126,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 		phones.add( new Phone( "111" ) );
 		Person thomas = new Person( 7, "Thomas Reaper", phones );
 
-		test( context, openSession()
-				.thenCompose( session -> session
-						.persist( thomas )
-						.thenCompose( v -> session.flush() ) )
+		test( context, getSessionFactory()
+				.withTransaction( session -> session.persist( thomas ) )
 				.thenCompose( v -> openSession() )
 				.thenCompose( session -> session.find( Person.class, thomas.getId() ) )
 				.thenAccept( found -> assertPhones( context, found, "111", "111", "111", "111" ) )
@@ -147,10 +143,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 		phones.add( new Phone( "111" ) );
 		Person thomas = new Person( 567, "Thomas Reaper", phones );
 
-		test( context, openMutinySession()
-				.chain( session -> session
-						.persist( thomas )
-						.call( session::flush ) )
+		test( context, getMutinySessionFactory()
+				.withTransaction( session -> session.persist( thomas ) )
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, thomas.getId() ) )
 				.invoke( found -> assertPhones( context, found, "111", "111", "111", "111" ) )
@@ -168,17 +162,15 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 		Person thomas = new Person( 47, "Thomas Reaper", phones );
 
 		test( context, getSessionFactory()
-				.withTransaction( (session, tx) -> session
-						.persist( thomas ) )
-				.thenCompose( v -> openSession() )
-				.thenCompose( session -> session
-						.find( Person.class, thomas.getId() )
-						// Change one of the element in the collection
-						.thenAccept( found -> {
-							found.getPhones().set( 1, new Phone( "47" ) );
-							found.getPhones().set( 3, new Phone( "47" ) );
-						} )
-						.thenCompose( ignore -> session.flush() ) )
+				.withTransaction( session -> session.persist( thomas ) )
+				.thenCompose( v -> getSessionFactory()
+						.withTransaction( session -> session
+								.find( Person.class, thomas.getId() )
+								// Change one of the element in the collection
+								.thenAccept( found -> {
+									found.getPhones().set( 1, new Phone( "47" ) );
+									found.getPhones().set( 3, new Phone( "47" ) );
+								} ) ) )
 				.thenCompose( ignore -> openSession() )
 				.thenCompose( session -> session.find( Person.class, thomas.getId() ) )
 				.thenAccept( found -> assertPhones( context, found, "000", "000", "47", "47" ) )
@@ -197,17 +189,15 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 		Person thomas = new Person( 47, "Thomas Reaper", phones );
 
 		test( context, getMutinySessionFactory()
-				.withTransaction( (session, tx) -> session
-						.persist( thomas ) )
-				.chain( this::openMutinySession )
-				.chain( newSession -> newSession
-						.find( Person.class, thomas.getId() )
-						// Change a couple of the elements in the collection
-						.invoke( found -> {
-							found.getPhones().set( 1, new Phone( "47" ) );
-							found.getPhones().set( 3, new Phone( "47" ) );
-						} )
-						.call( newSession::flush ) )
+				.withTransaction( session -> session.persist( thomas ) )
+				.chain( () -> getMutinySessionFactory()
+						.withTransaction( newSession -> newSession
+								.find( Person.class, thomas.getId() )
+								// Change a couple of the elements in the collection
+								.invoke( found -> {
+									found.getPhones().set( 1, new Phone( "47" ) );
+									found.getPhones().set( 3, new Phone( "47" ) );
+								} ) ) )
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, thomas.getId() ) )
 				.invoke( found -> assertPhones( context, found, "000", "000", "47", "47" ) )
@@ -225,18 +215,16 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 		Person thomas = new Person( 47, "Thomas Reaper", phones );
 
 		test( context, getSessionFactory()
-				.withTransaction( (session, tx) -> session
-						.persist( thomas ) )
-				.thenCompose( v -> openSession() )
-				.thenCompose( newSession -> newSession
-						.find( Person.class, thomas.getId() )
-						// Change one of the element in the collection
-						.thenAccept( found -> {
-							// it doesn't matter which elements are deleted because they are all equal
-							found.getPhones().remove( 1 );
-							found.getPhones().remove( 2 );
-						} )
-						.thenCompose( ignore -> newSession.flush() ) )
+				.withTransaction( session -> session.persist( thomas ) )
+				.thenCompose( v -> getSessionFactory()
+						.withTransaction( newSession -> newSession
+								.find( Person.class, thomas.getId() )
+								// Change one of the element in the collection
+								.thenAccept( found -> {
+									// it doesn't matter which elements are deleted because they are all equal
+									found.getPhones().remove( 1 );
+									found.getPhones().remove( 2 );
+								} ) ) )
 				.thenCompose( ignore -> openSession() )
 				.thenCompose( session -> session.find( Person.class, thomas.getId() ) )
 				.thenAccept( found -> assertPhones( context, found, "000", "000" ) )
@@ -254,18 +242,16 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 		Person thomas = new Person( 47, "Thomas Reaper", phones );
 
 		test( context, getMutinySessionFactory()
-				.withTransaction( (session, tx) -> session
-						.persist( thomas ) )
-				.chain( this::openMutinySession )
-				.chain( newSession -> newSession
-						.find( Person.class, thomas.getId() )
-						// Change one of the element in the collection
-						.invoke( found -> {
-							// it doesn't matter which elements are deleted because they are all equal
-							found.getPhones().remove( 1 );
-							found.getPhones().remove( 2 );
-						} )
-						.call( newSession::flush ) )
+				.withTransaction( session -> session.persist( thomas ) )
+				.chain( () -> getMutinySessionFactory()
+						.withTransaction( newSession -> newSession
+								.find( Person.class, thomas.getId() )
+								// Change one of the element in the collection
+								.invoke( found -> {
+									// it doesn't matter which elements are deleted because they are all equal
+									found.getPhones().remove( 1 );
+									found.getPhones().remove( 2 );
+								} ) ) )
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, thomas.getId() ) )
 				.invoke( found -> assertPhones( context, found, "000", "000" ) )
@@ -408,7 +394,7 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 				.withTransaction( (session, tx) -> session
 						.find( Person.class, thePerson.getId() )
 						// replace phones with list of 1 phone
-						.thenAccept( foundPerson -> foundPerson.setPhones( Arrays.asList( new Phone( "000-000-0000" ) ) ) ) )
+						.thenAccept( foundPerson -> foundPerson.setPhones( List.of( new Phone( "000-000-0000" ) ) ) ) )
 				.thenCompose( s -> openSession() )
 				.thenCompose( session -> session.find( Person.class, thePerson.getId() ) )
 				.thenAccept( changedPerson -> assertPhones( context, changedPerson, "000-000-0000" ) )
@@ -421,7 +407,7 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 				.withTransaction( (session, tx) -> session
 						.find( Person.class, thePerson.getId() )
 						// replace phones with list of 1 phone
-						.invoke( foundPerson -> foundPerson.setPhones( Arrays.asList( new Phone( "000-000-0000" ) ) ) ) )
+						.invoke( foundPerson -> foundPerson.setPhones( List.of( new Phone( "000-000-0000" ) ) ) ) )
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, thePerson.getId() ) )
 				.invoke( changedPerson -> assertPhones( context, changedPerson, "000-000-0000" ) )
@@ -431,9 +417,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 	@Test
 	public void removePersonStageAPI(TestContext context){
 		test( context, getSessionFactory()
-				.withTransaction( (session, tx) -> session
+				.withTransaction( session -> session
 						.find( Person.class, thePerson.getId() )
-						// remove thePerson entity and flush
 						.thenCompose( session::remove ) )
 				.thenCompose( v -> openSession() )
 				.thenCompose( session -> session.find( Person.class, thePerson.getId() ) )
@@ -447,9 +432,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 	@Test
 	public void removePersonMutinyAPI(TestContext context) {
 		test( context, getMutinySessionFactory()
-				.withTransaction( (session, tx) -> session
+				.withTransaction( session -> session
 						.find( Person.class, thePerson.getId() )
-						// remove thePerson entity and flush
 						.call( session::remove ) )
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, thePerson.getId() ) )
@@ -470,10 +454,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 										  )
 		);
 
-		test( context, openSession()
-				.thenCompose( session -> session
-						.persist( secondPerson )
-						.thenCompose( v -> session.flush() ) )
+		test( context, getSessionFactory()
+				.withTransaction( session -> session.persist( secondPerson ) )
 				.thenCompose( v -> openSession() )
 				.thenCompose( session -> session.find( Person.class, secondPerson.getId() ) )
 				.thenAccept( foundPerson -> assertPhones( context, foundPerson, "222-222-2222", "333-333-3333", "444-444-4444" ) )
@@ -494,10 +476,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 										  )
 		);
 
-		test( context, openMutinySession()
-				.chain( session -> session
-						.persist( secondPerson )
-						.call( session::flush ) )
+		test( context, getMutinySessionFactory()
+				.withTransaction( session -> session.persist( secondPerson ) )
 				// Check new person collection
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, secondPerson.getId() ) )
@@ -513,10 +493,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 	public void persistCollectionOfNullsWithStageAPI(TestContext context) {
 		Person secondPerson = new Person( 9910000, "Kitty", Arrays.asList( null, null ) );
 
-		test( context, openSession()
-				.thenCompose( session -> session
-						.persist( secondPerson )
-						.thenCompose( v -> session.flush() ) )
+		test( context, getSessionFactory()
+				.withTransaction( session -> session.persist( secondPerson ) )
 				// Check new person collection
 				.thenCompose( v -> openSession() )
 				.thenCompose( session -> session.find( Person.class, secondPerson.getId() ) )
@@ -529,10 +507,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 	public void persistCollectionOfNullsWithMutinyAPI(TestContext context) {
 		Person secondPerson = new Person( 9910000, "Kitty", Arrays.asList( null, null ) );
 
-		test( context, openMutinySession()
-				.chain( session -> session
-						.persist( secondPerson )
-						.call( session::flush ) )
+		test( context, getMutinySessionFactory()
+				.withTransaction( session -> session.persist( secondPerson ) )
 				// Check new person collection
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, secondPerson.getId() ) )
@@ -545,10 +521,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 	public void persistCollectionWithNullsWithStageAPI(TestContext context) {
 		Person secondPerson = new Person( 9910000, "Kitty", Arrays.asList( null, new Phone( "567" ), null ) );
 
-		test( context, openSession()
-				.thenCompose( session -> session
-						.persist( secondPerson )
-						.thenCompose( v -> session.flush() ) )
+		test( context, getSessionFactory()
+				.withTransaction( session -> session.persist( secondPerson ) )
 				// Check new person collection
 				.thenCompose( v -> openSession() )
 				.thenCompose( session -> session.find( Person.class, secondPerson.getId() ) )
@@ -561,10 +535,8 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 	public void persistCollectionWithNullsWithMutinyAPI(TestContext context) {
 		Person secondPerson = new Person( 9910000, "Kitty", Arrays.asList( null, new Phone( "567" ), null ) );
 
-		test( context, openMutinySession()
-				.chain( session -> session
-						.persist( secondPerson )
-						.call( session::flush ) )
+		test( context, getMutinySessionFactory()
+				.withTransaction( session -> session.persist( secondPerson ) )
 				// Check new person collection
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, secondPerson.getId() ) )
@@ -575,14 +547,13 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 
 	@Test
 	public void setCollectionToNullWithStageAPI(TestContext context) {
-		test( context, openSession()
-				.thenCompose( session -> session
+		test( context, getSessionFactory()
+				.withTransaction( session -> session
 						.find( Person.class, thePerson.getId() )
 						.thenAccept( found -> {
 							context.assertFalse( found.getPhones().isEmpty() );
 							found.setPhones( null );
-						} )
-						.thenCompose( v -> session.flush() ) )
+						} ) )
 				.thenCompose( v -> openSession() )
 				.thenCompose( session -> session.find( Person.class, thePerson.getId() ) )
 				.thenAccept( foundPerson -> assertPhones( context, foundPerson ) )
@@ -591,14 +562,13 @@ public class EagerOrderedElementCollectionForEmbeddableTypeListTest extends Base
 
 	@Test
 	public void setCollectionToNullWithMutinyAPI(TestContext context) {
-		test( context, openMutinySession()
-				.chain( session -> session
+		test( context, getMutinySessionFactory()
+				.withTransaction( session -> session
 						.find( Person.class, thePerson.getId() )
 						.invoke( found -> {
 							context.assertFalse( found.getPhones().isEmpty() );
 							found.setPhones( null );
-						} )
-						.call( session::flush ) )
+						} ) )
 				.chain( this::openMutinySession )
 				.chain( session -> session.find( Person.class, thePerson.getId() ) )
 				.invoke( foundPerson -> assertPhones( context, foundPerson ) )
